--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,10 @@
     "getstream": "^8.1.2",
     "nodemon": "^2.0.20",
     "stream-chat": "^8.4.0",
+    "supertest": "^6.3.3",
     "twilio": "^4.7.2"
+  },
+  "devDependencies": {
+    "jest": "^29.4.3"
   }
 }
